@@ -44,6 +44,7 @@
 	* Added marker ###FACETING.active### to detect if any facet option has been selected
 	* Added support for plugin commands returning array and objects for rendering in their template subparts
 	* Changed the results per page switch to be a command on its own
+	* Fixed bug #34558: Wrong processing of plugin.tx_solr.search.query.filter stdWrap in pi_search, credits Jochem de Groot
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
